2005-12-27 19:56  Andrej Kacian <andrej@kacian.sk>
	* src/rssyl_gtk.c: Upon plugin unload, close opened folder if it's our
		folder, so s-c doesn't crash when clicking on leftover items.

2005-12-27 19:22  Andrej Kacian <andrej@kacian.sk>
	* src/feed.c: Take date into account when comparing feed items.
	* configure.ac: Require s-c >=1.9.100.0

2005-12-20 19:59  Colin Leroy <colin@colino.net>
	* src/rssyl_gtk.c: Fix a potential crasher

2005-12-18 17:15  Andrej Kacian <andrej@kacian.sk>
	* src/plugin.c: Add bind_textdomain_codeset(), so non-unicode locales work.

2005-12-17 19:08  Andrej Kacian <andrej@kacian.sk>
	* src: Updated some UI strings, changed code a bit, so the popup menu labels
		can take advantage of the translation.

2005-12-17 00:34  Andrej Kacian <andrej@kacian.sk>
	* src/feed.c, src/feed.h: Do not allow subscribing to a feed more than once.

2005-12-15 22:01  Andrej Kacian <andrej@kacian.sk>
	* src, po, configure.ac, Makefile.am: Added gettext support

2005-12-15 11:35  Paul Mangan <claws@thewildbeast.co.uk>
	* src, configure.ac: add plugin_version()

2005-12-13 21:59  Andrej Kacian <andrej@kacian.sk>
	* src: More leak fixes by Colin.
	* configure.ac: Add more header checks. Patch by Paul Mangan.

2005-12-12 14:29  Andrej Kacian <andrej@kacian.sk>
	* src: Fix many memory leaks. Thanks to Colin for the patch.

2005-12-08 10:03  Andrej Kacian <andrej@kacian.sk>
	* src/feed.c: Do not use linebreaks for STATUSBAR_PUSH(). Patch by Fabien
		Vantard <fzzzzz at gmail.com>.

2005-12-07 19:25  Colin Leroy <colin@colino.net>
	* src/rssyl.c: Add plugin_licence()

2005-12-04 15:24  Colin Leroy <colin@colino.net>
	* src/feed.c: Make sure template is opened in rssyl_fetch_feed_threaded,
		set ctx->ready to TRUE before returning on error, and check
		template isn't NULL in caller. Maybe fixes bug #864.

2005-12-03 19:46  Andrej Kacian <andrej@kacian.sk>
	* configure.ac: Get search curl headers where curl-config tells us.